argocd-managed/serverinfo/Service.serverinfo.yaml
apiVersion: v1
kind: Service
metadata:
  name: serverinfo
  namespace: apps
spec:
  selector:
    app: serverinfo
  ports:
  - port: 80
    targetPort: 80
