argocd-managed/serverinfo/Ingress.serverinfo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: serverinfo
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
   - host: serverinfo.my-minikube
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: serverinfo
               port:
                 number: 80
